playing with java.locale.providers property